# osm

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  OSM-License v1.0.md  README.md  docker-compose.yml  entrypoint.sh  meson.build  osm.py  requirements.txt  test_osm.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
config/: osmconf.cfg
context/: profile
src/: config_parser.h  osmanager.c  osminitdb.h
